# mlops_1

./: Dockerfile  LICENSE  README.md  demo.py  project_flow.txt  pyproject.toml  setup.py  template.py  workflow.txt
notebook/: exp-notebook.ipynb  mongo_db_demo.ipynb
src/configuration/: aws_connection.py
src/constants/: __init__.py
src/pipeline/: training_pipeline.py
vehicle_insurance/: pyvenv.cfg
vehicle_insurance/Scripts/: activate  activate.bat  get_gprof  get_objgraph  jp.py  undill
